--- a/src/components/AlbumDetails/AlbumDetails.css
+++ b/src/components/AlbumDetails/AlbumDetails.css
@@ -2,18 +2,16 @@
     display: flex;
     flex-direction: column;
     background: rgb(18,18,18);
-    background: linear-gradient(0deg, rgba(18,18,18,1) 0%, rgba(71,97,82,1) 100%);
+    background: linear-gradient(180deg, rgba(18,18,18,1) 0%, rgba(71,97,82,1) 50%, rgba(18,18,18,1) 100%);
     border-radius: 8px;
+    gap: 48px;
+    padding: 24px;
 }
 
 .album-header{
-    background: rgb(71,97,82);
-    background: linear-gradient(0deg, rgba(71,97,82,1) 0%, rgba(18,18,18,1) 100%);
     display: flex;
-    gap: 24px;
-    padding-top: 150px;
-    padding-bottom: 25px;
-    padding-left: 25px;
+    gap: 36px;
+    align-items: flex-end;
     align-self: stretch;
 }
 
@@ -84,20 +82,15 @@
 }
 
 .album-body{
-    background: rgb(18,18,18);
-    background: linear-gradient(0deg, rgba(18,18,18,1) 0%, rgba(71,97,82,1) 100%);
     display: flex;
     flex-direction: column;
     align-self: stretch;
-    padding: 8px;
-    gap: 28px;
+    gap: 48px;
 }
 
 .album-body-controls{
     display: flex;
     justify-content: space-between;
-    padding-left: 24px;
-    padding-right: 24px;
     align-items: center;
     align-self: stretch;
 }
@@ -217,8 +210,6 @@
     align-self: stretch;
     display: flex;
     flex-direction: column;
-    padding-left: 24px;
-    padding-right: 24px;
     gap: 24px;
 }
 
@@ -247,7 +238,7 @@
 .album-body-songs-dur-header{
     width: 20%;
     text-align: right;
-    padding-right: 20px;
+    padding-right: 16px;
 }
 
 .album-body-songs-dur-header svg{
@@ -261,7 +252,7 @@
 .album-body-songs-list{
     display: flex;
     flex-direction: column;
-    gap: 8px;
+    gap: 16px;
 }
 
 .album-rights{
