--- a/src/components/Home/Home.css
+++ b/src/components/Home/Home.css
@@ -1,5 +1,5 @@
 .home{
     display: flex;
     flex-direction: column;
-    gap: 48px;
+    gap: 18px;
 }
